--- a/src/main/resources/templates/layout/community/community.html
+++ b/src/main/resources/templates/layout/community/community.html
@@ -30,7 +30,7 @@
 		                </div>
 		                  
 						<div class="main-button">
-						  <a href="#">글 작성하기</a>
+						  <a th:href="@{/insertBoard}">글 작성하기</a>
 		                </div>
 					  </div>
 		              <!-- ***** Search End ***** -->
