--- a/src/main/resources/templates/layout/member/change.html
+++ b/src/main/resources/templates/layout/member/change.html
@@ -4,75 +4,11 @@
 <head>
 <title>이용권 변경</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<script type="text/javascript">
-//페이지 로드 시 가입일만 자동으로 계산
-window.onload = function () {
-   calculateRegDate();
-}
-
-function calculateRegDate() { // 페이지 로드되면 바로 가입일은 현재 날짜로 작성됨
-   var today = new Date();
-   var change_dateInput = document.getElementById("change_date");
-   change_dateInput.value = formatDate(today);
-}
-
-// 날짜를 "yyyy-MM-dd" 형식으로 변환
-function formatDate(date) {
-
-   var year = date.getFullYear();
-   var month = (date.getMonth() + 1).toString().padStart(2, '0');
-   var day = date.getDate().toString().padStart(2, '0');
-   return year + "-" + month + "-" + day;
-}  
-        
- // 회원 버튼 누르면 자동으로 들어감 
-        function setMembership(position) {
-            var positionSelect = document.getElementById('positionSelect');
-            var options = positionSelect.options;
-            for (var i = 0; i < options.length; i++) {
-                if (options[i].value === position) {
-                    positionSelect.value = position;
-                    break;
-                }
-            }
-            
-         // 누른 버튼에 따라 changeDate 함수 호출
-            changeDate();
-        }
-        
-        function changeDate() {
-            // 변경일 가져오기
-            var change_dateString = document.getElementById("change_date").value;
-
-            // 문자열을 Date 객체로 변환
-            var change_dateObj = new Date(change_dateString);
-
-            // 날짜를 "yyyy-MM-dd" 형식으로 변환
-            var renewDateObj = new Date(change_dateObj);
-            var endDateObj = new Date(change_dateObj);
-
-            if (change_dateObj) {
-                var position = document.getElementById("positionSelect").value;
-
-                // 이용권 종료날짜 계산 (방문자는 8일, 나머지는 31일)
-                if (position === "GUEST") {
-                    endDateObj.setDate(change_dateObj.getDate() + 7);
-                } else {
-                    endDateObj.setDate(change_dateObj.getDate() + 30);
-                }
-
-                // 각 입력 날짜 설정
-                document.getElementById("renew_date").value = formatDate(renewDateObj);
-                document.getElementById("end_date").value = formatDate(endDateObj);
-                console.log("renew_date"+document.getElementById("renew_date").value); 
-                console.log("end_date"+document.getElementById("end_date").value); 
-            }
-        }
-    </script>
+<script type="text/javascript" th:src="@{/assets/js/member.js}"></script>
 </head>
 <!-- header -->
 <th:block th:replace="fragments/header :: header"></th:block>
-<body>
+<body onload="calculateRegDate()">
    <div class="container">
       <div class="row">
          <div class="col-lg-12">
@@ -135,14 +71,14 @@ function formatDate(date) {
                            <div>
                            <br>
                            <!-- 로그인 되었을때만 보이게 이용권 변경 가능-->
-                              <div th:if="${session.member != null}">
+                              <div th:if="${session.member != null}">                                         
                                  <div class="input_block">
-                                    <h5>현재 이용권</h5>
-                                    <input type="text" name="position" th:value="${session.member.position}" readonly>
-                                 </div>                                 
+                                    <h5>id</h5>
+                                    <input type="text" name="id" id="id" th:value="${session.member.id}" readonly>
+                                 </div>                     
                                  <div class="input_block">
                                     <h5>변경 이용권</h5>
-                                    <select id="positionSelect" name="position" th:value="${session.member.position}">
+                                    <select id="positionSelect" name="position" th:value="${session.member.position}" onchange="setMembership(this.value)">
                                        <option value="GUEST" th:selected="${session.member.position == 'GUEST'}">GUEST</option>
                                        <option value="BASIC" th:selected="${session.member.position == 'BASIC'}">BASIC</option>
                                        <option value="PREMIUM" th:selected="${session.member.position == 'PREMIUM'}">PREMIUM</option>
@@ -154,19 +90,23 @@ function formatDate(date) {
                                  </div>
                                  <div class="input_block">
                                     <h5>이용권 갱신일</h5>
-                                    <input type="date" name="renew_date" th:value="${#dates.format(session.member.renew_date, 'yyyy-MM-dd')}" pattern="yyyy-MM-dd" readonly>
+                                    <input type="date" name="renew_date" id="renew_date" th:value="${#dates.format(session.member.renew_date, 'yyyy-MM-dd')}" readonly>
                                  </div>
                                  <div class="input_block">
                                     <h5>이용권 종료일</h5>
-                                    <input type="date" name="end_date" th:value="${#dates.format(session.member.end_date, 'yyyy-MM-dd')}" readonly>
+                                    <input type="date" name="end_date"  id="end_date" th:value="${#dates.format(session.member.end_date, 'yyyy-MM-dd')}" readonly>
+                                 </div>
+                                 <div class="input_block">
+                                    <h5>이용권 종료일</h5>
+                                    <input type="date" name="end_date" id="end_date" th:value="${#dates.format(session.member.end_date, 'yyyy-MM-dd')}" readonly>
                                  </div><br>
                                  <div class="link-block">
-                              <a th:href="@{/main}">메인으로</a> &nbsp; &nbsp; <a th:href="@{/modify}">회원정보 수정</a> <br>
+                              <a th:href="@{/main}">메인으로</a> &nbsp;
                               </div>
                               <input class="signin_btn" type="submit" value="이용권 변경 완료">
                               </div>                              
                            </div>
-                                                   </form>
+                          </form>
                      </div>
                   </div>
                </div>
@@ -177,4 +117,4 @@ function formatDate(date) {
    <!-- footer -->
    <th:block th:replace="fragments/footer :: footer"></th:block>
 </body>
-</html>
+</html> 
