--- a/src/main/resources/templates/layout/member/find_pwd.html
+++ b/src/main/resources/templates/layout/member/find_pwd.html
@@ -21,7 +21,7 @@
 
 <body>
 	<h2>비밀번호 찾기 찾기 페이지</h2>
-	<form th:action="@{/member/find_pwd}" method="post">
+	<form th:action="@{/find_pwd}" method="post">
 		<label>아이디</label>
 		<input type="text" name="id" id="id">
 		<label>이메일</label>
@@ -29,6 +29,6 @@
 		<input type="button" value="비밀번호 찾기" onclick="check_find_pwd()"><br><br>		
 	</form>
 	
-	<a th:href="@{/member/login}">로그인 페이지로</a>
+	<a th:href="@{/login}">로그인 페이지로</a>
 </body>
 </html>
